--- a/preferencemanagement/src/main/res/layout/activity_start.xml
+++ b/preferencemanagement/src/main/res/layout/activity_start.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/button1"
         android:background="#FFFF00"
-        android:padding="10dp"
+        android:padding="@dimen/default_padding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Print prefs"
