--- a/preferencemanagement/src/main/res/values/themes.xml
+++ b/preferencemanagement/src/main/res/values/themes.xml
@@ -15,7 +15,8 @@
 
 
         <item name="preferenceTheme">@style/Theme.App.Preferences</item>
-
+<!--        <item name="alertDialogTheme">@style/Theme.AppCompat.DayNight.Dialog.Alert</item>-->
+        <item name="alertDialogTheme">@style/AppAlertDialog</item>
     </style>
 <!-- below codes are copied from the tutorial -->
     <!-- this is the theme of tutorial
@@ -23,6 +24,13 @@
         <item name="preferenceTheme">@style/Theme.App.Preferences</item>
     </style>
     -->
+
+    <style name="AppAlertDialog"
+        parent="Preference.DialogPreference.EditTextPreference">
+        <item name="colorPrimary">@color/teal_700</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
 
     <style name="Theme.App.Preferences" parent="PreferenceThemeOverlay">
         <item name="android:textColor">#AAAAAA</item>
