--- a/preferencemanagement/src/main/res/layout/pref_dialog_edittext_fix.xml
+++ b/preferencemanagement/src/main/res/layout/pref_dialog_edittext_fix.xml
@@ -7,6 +7,7 @@
     android:layout_marginTop="48dp"
     android:layout_marginBottom="48dp"
     android:fillViewport="true"
+    android:theme="@style/AppAlertDialogContent"
     android:overScrollMode="ifContentScrolls">
 
     <androidx.constraintlayout.widget.ConstraintLayout
