--- a/preferencemanagement/src/main/res/values/colors.xml
+++ b/preferencemanagement/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#ffa500</color>
+    <color name="colorAccent">#2196F3</color>
 </resources>
