--- a/preferencemanagement/src/main/res/values/themes.xml
+++ b/preferencemanagement/src/main/res/values/themes.xml
@@ -26,14 +26,19 @@
     -->
 
     <style name="AppAlertDialog"
-        parent="Preference.DialogPreference.EditTextPreference">
+        parent="Preference.DialogPreference">
         <item name="colorPrimary">@color/teal_700</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="Theme.App.Preferences" parent="PreferenceThemeOverlay">
         <item name="android:textColor">#AAAAAA</item>
+    </style>
+
+
+    <style name="AppAlertDialogContent"
+        parent="Theme.AppCompat.DayNight">
+        <!-- To keep the color of EditText underline, cursor color -->
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
 </resources>
