--- a/preferencemanagement/src/main/res/xml/app_preferences.xml
+++ b/preferencemanagement/src/main/res/xml/app_preferences.xml
@@ -31,5 +31,11 @@
             app:summary="@string/pref_omemo_setting_summary_default_off"
             app:title="@string/pref_omemo_setting"
             app:iconSpaceReserved="false"/>
+
+        <com.applications.preferencemanagement.TimePreference
+            android:key="key4"
+            android:title="Time Preference"
+            android:summary="Time Summary"
+            android:defaultValue="90" />
     </PreferenceCategory>
 </PreferenceScreen>
