--- a/preferencemanagement/src/main/res/xml/app_preferences.xml
+++ b/preferencemanagement/src/main/res/xml/app_preferences.xml
@@ -32,10 +32,18 @@
             app:title="@string/pref_omemo_setting"
             app:iconSpaceReserved="false"/>
 
+<!--
         <com.applications.preferencemanagement.TimePreference
             android:key="key4"
             android:title="Time Preference"
             android:summary="Time Summary"
             android:defaultValue="90" />
+-->
+
+        <com.applications.preferencemanagement.tutorial2.LanguagePreference
+            android:icon="@drawable/ic_baseline_language_24"
+            android:title="@string/language"
+            />
+
     </PreferenceCategory>
 </PreferenceScreen>
